8284960: Adding --enable-preview in vectorAPI benchmarks.