@@ -30,7 +30,7 @@ import org.openjdk.jmh.infra.Blackhole;
 
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @State(Scope.Thread)
-@Fork(jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
+@Fork(jvmArgsPrepend = {"--add-modules=jdk.incubator.vector", "--enable-preview"})
 public class MaskFromLongBenchmark {
     static long val = 0;
 
